# transturing

./: .gitignore  AGENTS.md  CLAUDE.md  FINDINGS.md  HOW-IT-WORKS.md  LICENSE  RD-PLAN.md  README.md  WRITEUP.md  _MAP.md  algebraic_poly.py  arithmetic_ops.py  assembler.py  bitvec.py  c_pipeline.py  closed_form.py  executor.py  ff_symbolic.py  ff_symbolic_poly_embedding.py  ff_symbolic_recurrent.py  forking_executor.py  guarded.py  isa.py  modpoly.py  path_b.py  phase11_compile_executor.py  phase13_isa_completeness.py  phase14_extended_isa.py  phase16_linear_memory.py  phase6_curriculum.py  phase7_results.json  poly.py  poly_compiler.py  programs.py  pyproject.toml  specialize.py  symbolic_executor.py  symbolic_programs_catalog.py  symbolic_types.py  test_closed_form.py  (+7 more)
.claude/skills/: execute-program.md
dev/: FINDINGS.md  benchmark_scaling.py  ff_closed_form_equivalence.md  ff_symbolic_equivalence.md  poly_compiler_context.md  symbolic_collapse_report.md
dev/phases/: AGENTS.md  phase10_digit_decomposition.py  phase10_results.json  phase15_local_variables.py  phase17_function_calls.py  phase18_integration_tests.py  phase19_structured_assembler.py  phase1_hull_cache.py  phase20_type_masking_tests.py  phase2_parabolic.py  phase2b_address_limits.py  phase3_cumsum.py  phase4_stack_machine.py  phase5_training.py  phase6_curriculum.py  phase6_results.json  phase6b_results.json  phase7_percepta_arch.py  phase8_results.json
docs/: CHANGELOG.md  README.md  contributing.md  quickstart.md
docs/architecture/: compilation.md  memory-model.md  overview.md
docs/development/: findings-summary.md  rd-plan-summary.md
docs/guides/: writing-programs.md
docs/isa/: index.md  opcodes.md
docs/reference/: api.md  file-map.md
examples/: hungarian.py  sudoku.py
src/: AGENTS.md  benchmark.py  benchmarks.py  executor.mojo  percepta_exec  run_mojo_tests.py
src/transturing/: __init__.py
src/transturing/backends/: __init__.py  numpy_backend.py  torch_backend.py
src/transturing/core/: __init__.py  abc.py  assembler.py  c_pipeline.py  isa.py  programs.py  registry.py  wasm_binary.py  wat_parser.py
tests/: conftest.py  test_consolidated.py  test_wasm_binary.py  test_wat_parser.py
