[project]
name = "transturing"
version = "0.1.0"
description = "Compiled transformer executor — programs run inside a transformer's own inference loop. Each instruction fetch and memory read is a parabolic attention head."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Oskar Austegard" },
    { name = "Inschrift.Spruch.Raum" },
]
keywords = ["transformer", "attention", "interpreter", "wasm", "compiled-execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.24"]
torch = ["torch>=2.0"]
all = ["transturing[numpy,torch]"]

[dependency-groups]
dev = [
    "transturing[all]",
    "pytest>=9.0.2",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
lint.extend-select = ["ALL"]
